# gpt-graphic-design-evaluator

./: README.md  pyproject.toml
src/gpt_graphic_design_evaluator/: __init__.py  evaluator.py  utils.py
src/gpt_graphic_design_evaluator/gpt_evaluators/: __init__.py  absolute_evaluator.py  prompts.py  relative_evaluator.py
